--- a/style.css
+++ b/style.css
@@ -28,9 +28,7 @@ main {
 }
 
 .character-card {
-    height:14rem;
     margin-top: .5rem;
-    width:94vw;
     max-width: 230px;
     padding: 1vh 1vw;
     font-size: 1.6rem;
@@ -39,8 +37,7 @@ main {
     position: relative;
     background: #231d24;
     text-align: center;
-    overflow: hidden;
-    border: 0.2rem solid #000721;
+    border: 0.08rem solid #000721;
     box-shadow: inset 0px 0px 6px 2px rgba(100,100,100,0.2),
                 0px 0px 10px rgba(117,182,214,0.2);
 }
@@ -68,8 +65,8 @@ main {
 }
 
 .avatar {
-    width: 15vw;
-    height: 180px;
+    width: 15vh;
+    height: 22vh;
     border: 2px solid #000721;
     max-width:100%;
     opacity: 0.8;
@@ -134,6 +131,8 @@ main {
     justify-content: center;
     align-items: center;
     gap: .5rem;
+    border-bottom-left-radius: 14px;
+    border-bottom-right-radius: 14px;
 }
 
 @media(min-width:550px){
